<resources>
    <string name="app_name">Other StockSettings</string>
    <string name="camera_sound_title">Camera Sound</string>
    <string name="camera_sound_summary_off">Off</string>
    <string name="camera_sound_summary_on">On</string>
    <string name="warning_title">Warning!</string>
    <string name="warning_summary">Shutter sound is compulsory in some regions.\nPlease abide strictly by the laws, rules and regulations of your area.</string>
    <string name="double_tap_home_to_sleep_title">Double tap home to sleep</string>
    <string name="cm_settings_title">CyanogenMod Settings</string>
    <string name="cm_settings_summary">Gesture, LED ...</string>
    <string name="camera_switch_title">Camera Switch</string>
    <string name="about_title">About</string>
    <string name="camera_switch_oppo_summary">OPPO Camera</string>
    <string name="camera_switch_miui_summary">MIUI Camera</string>
    <string name="camera_switch_cm_summary">CM Camera</string>
    <string name="camera_switch_cp_summary">Coolpad Camera</string>
    <string name="home_layout_switch_title">Home Layout Switch</string>
    <string name="home_layout_switch_summary_4x5" translatable="false">4x5</string>
    <string name="home_layout_switch_summary_not_support_4x5">Detection of DPI is less than or equal to 440, does not support the 4x5 layout</string>
    <string name="home_layout_switch_summary_4x6" translatable="false">4x6</string>
    <string name="home_layout_switch_summary_5x5" translatable="false">5x5</string>
    <string name="density_title">Screen DPI</string>
    <string name="density_error">Warning:Input Error!</string>
    <string name="density_edit_title">Adjust the DPI specified</string>
    <string name="density_edit_message">please enter a reasonable range of values(%1$s)\n\nThis operation may lead to frequent system FC, careful revision%2$s</string>
    <string name="density_edit_message_restore_homelayout">\n\nWill restore MIUI Launcher layout</string>
    <string name="density_summary">Now dpi is%1$s , Default is%2$s</string>
    <string name="dialog_ok">Done!Are you sure want to reboot the phone?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_reboot">Please restart your mobile phone manually in some time later</string>
    <string name="dialog_is_agree">Never Notify</string>
    <string name="sound_patch_title">Sound Patch</string>
    <string name="sound_patch_summary">Click to patch default audio level</string>
    <string name="app_screen_mask_title">App Screen Mask</string>
    <string name="find_oppo_camera">The system is being used in the OPPO camera, please turn off the camera sound on the OPPO camera settings</string>
    <string name="power_sound_title">Power Sound</string>
    <string name="power_sound_summary_off">Off</string>
    <string name="power_sound_summary_on">On</string>
    <string name="sounds">System Sounds</string>
    <string name="screenshot_sound_summary_off">Screenshot Sound Off!</string>
    <string name="screenshot_sound_summary_on">Screenshot Sound On!</string>
    <string name="screenshot_sound_title">Screenshot Sound</string>
    <string name="view_weibo_title">Xs</string>
    <string name="view_weibo_summary">Click to view my sian weibo</string>
    <string name="kernel_config_open">Has opened the kernel optimization option, please be careful to adjust the kernel information</string>
    <string name="donate_title">Donations</string>
    <string name="donate_about"><font color="blue"><b>About donations</b></font></string>
    <string name="donate_summary">Click to donate</string>
    <string name="donate_about_info">If you would like to buy me some beer, go for it and thank you! If you don\'t want to donate, it is perfectly fine for me. Just feel free to flash all my ROMs. I don\'t do this for the money.</string>
</resources>
