<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/double_tap_home_to_sleep_title"
        android:key="double_tap_home_to_sleep_key" />

    <CheckBoxPreference
        android:key="sound_patch_key"
        android:summary="@string/sound_patch_summary"
        android:title="@string/sound_patch_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="camera_sound_key"
        android:title="@string/camera_sound_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="power_sound_key"
        android:title="@string/power_sound_title" />

    <PreferenceScreen
        android:title="@string/app_screen_mask_title"
        android:key="app_screen_mask_key" >
        <intent
            android:action="android.intent.action.main"
            android:targetClass="cn.mixiaoxiao.myappscreenmask.MainActivity"
            android:targetPackage="cn.mixiaoxiao.myappscreenmask" />
    </PreferenceScreen>

    <PreferenceScreen
        android:title="@string/cm_settings_title"
        android:key="cm_settings_key" >
        <intent
            android:action="android.intent.action.main"
            android:targetClass="com.android.settings_ex.DisplaySettings"
            android:targetPackage="com.android.settings_ex">
            </intent>
        </PreferenceScreen>

    <ListPreference
        android:defaultValue="0"
        android:key="camera_switch_key"
        android:title="@string/camera_switch_title"/>

    <ListPreference
        android:defaultValue="0"
        android:key="storage_switch_key"
        android:title="@string/storage_switch_title" />

    <ListPreference
        android:defaultValue="0"
        android:key="systemui_style_key"
        android:title="@string/systemui_style_title" />

    <ListPreference
        android:defaultValue="0"
        android:title="@string/home_layout_switch_title"
        android:key="home_layout_switch_key" />

    <EditTextPreference
        android:digits="1234567890"
        android:key="density_key"
        android:title="@string/density_title"/>

    <Preference
        android:summary="© 2015 MIUI Tools | Powered by Xs"
        android:title="@string/about_title"
        android:key="about_key" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://weibo.com/acexs" />
    </Preference>

    <Preference
        android:summary="@string/donate_summary"
        android:title="@string/donate_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/donate_link" />
    </Preference>


</PreferenceScreen>