<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="13.0sp"
        android:layout_weight="1"
        android:src="@drawable/zfb_logo" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="13.0sp"
        android:layout_weight="1"
        android:src="@drawable/qr" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:onClick="donate_button"
        android:text="@string/donate_summary" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0.0dip"
        android:layout_marginRight="0.0dip"
        android:layout_marginTop="13.0dip"
        android:gravity="center_horizontal"
        android:text="@string/donate_about"
        android:textColor="#cc000000"
        android:textSize="12.0sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13.0dip"
        android:layout_marginLeft="0.0dip"
        android:layout_marginRight="0.0dip"
        android:layout_marginTop="2.0dip"
        android:maxLines="10"
        android:text="@string/donate_about_info"
        android:textSize="10.0sp" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>